# NeuralPlay

./: CMakeLists.txt
NN/NN/: main.cpp
NN/NN/DataReader/: IrisDataReader.cpp
NN/NN/NeuralNet/: NeuralNet.cpp  NeuralNet.h  TDNeuralNet.cpp  TDNeuralNet.h
NN/NN/Othello/: AIPlayer.cpp  AIPlayer.h  HumanPlayer.cpp  HumanPlayer.h  NNPlayer.cpp  NNPlayer.h  OthelloBoard.cpp  OthelloBoard.h  Player.cpp  Player.h
NN/OthelloBoard/: main.cpp
NN/UTIrisDataLoader/: main.cpp
NN/UTNeuralNet/: main.cpp
include/DataReader/: IrisDataReader.h
include/NeuralNetwork/: NeuralNet.h  TDNeuralNet.h
include/Othello/: OthelloBoard.h
include/Player/: AIPlayer.h  Header.h  NNPlayer.h  Player.h
src/: IrisClassifier.cpp  OthelloMatch.cpp
src/DataReader/: IrisDataReader.cpp
src/NeuralNetwork/: NeuralNet.cpp  TDNeuralNet.cpp
src/Othello/: OthelloBoard.cpp
src/Player/: AIPlayer.cpp  HumanPlayer.cpp  NNPlayer.cpp  Player.cpp
src/UTs/: UTIrisDataLoader.cpp  UTNeuralNet.cpp
